Update cancel command tests